src/index.css
@import url('https://fonts.googleapis.com/css?family=Amatic+SC|Josefin+Sans&display=swap');

html{
	--soil:#6E2C00;
	--water:#3498D8;
	--rock:#ABB2B9;
	--green:#28B463;
	--red:#E54534;
	--headerFont:'Amatic SC', cursive;
	--bodyFont:'Josefin Sans', sans-serif;
}


body {
	margin:0;
	font-family:var(--bodyFont);
}

h1 , h2 {
	font-family:var(--headerFont);
	color:var(--green);
}

h1 {
	font-size:4rem;
}

h2{
	font-size:2rem;
}

h1 , h2 , h3 ,h4{
	margin-top:2rem;
	margin-bottom:0;
}

button{
	border:none;
	color:white;
	background-color:var(--red);
	padding:0.5rem;
	border-radius:0.5rem;
	font-family:var(--bodyFont);
	cursor:pointer;
}
input{
	border:none;
	border-radius:0.5rem;
}

ul{
	list-style:none;
}

